--- a/core/static/frontend/assets/css/project.css
+++ b/core/static/frontend/assets/css/project.css
@@ -1,16 +1,11 @@
-html,
 body {
-  position: relative;
-  height: 100%;
+  overflow-y: hidden;
 }
 
-body {
-  background: #f9f6ef;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  color: #000;
-  margin: 0;
-  padding: 0;
+.slider-background {
+  background-color: black;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .swiper {
