--- a/core/templates/frontend/project.html
+++ b/core/templates/frontend/project.html
@@ -87,9 +87,9 @@
       </div>
       <!-- offcanvas ends -->
 
-      <div class="container-fluid mt-4">
+      <div class="container-fluid">
         <div class="row">
-          <div class="col-sm-12 col-md-12 col-lg-8">
+          <div class="col-sm-12 col-md-12 col-lg-8 slider-background">
             <div class="tab-content" id="pills-tabContent">
               <div
                 class="tab-pane fade show active"
